fix-2/align user image in history block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 
 .gh-username img{
   width: 32px;
+  vertical-align: middle;
 }
 
 #profile-bio{
@@ -16,4 +17,8 @@
 
 .timeline .timeline-item {
   padding-bottom:1em;
+}
+
+.repo-name {
+  margin-top: 2px;
 }
